# streamlit_app

./: .gitignore  README.md  app.py  log.txt  package-lock.json  pyproject.toml  requirements.txt  setup.py  update_requirements.sh
.github/workflows/: run_app_test.yml
data/: ko_ron.csv  ko_tumo.csv  ko_tumo_for_ko.csv  ko_tumo_for_oya.csv  oya_ron.csv  oya_tumo.csv
pages/: 1_🀐_麻雀点数早見表.py  2_🀇_点数計算テスト(Easy).py  2_🀇_点数計算テスト.py  3_🀋_点数計算テスト(Normal).py  4_🀏_点数計算テスト(Hard).py  5_🀆_点数早見表可視化.py
question/: initialize.py
test/: test.sh  test_app.py  test_utils.py
tests/: requirements.txt  test_package.py
utils/: is_na.py  question.py
